audio player pops up on click play and fixed issue with episode rows being the wrong size when switching to another podcasts details

--- a/public/styles/sass/partials/_minemore-425px.sass
+++ b/public/styles/sass/partials/_minemore-425px.sass
@@ -358,6 +358,10 @@ body
   overflow: scroll
   position: relative
   background-color: #000000
+  +transition(all, .4s, cubic-bezier(0.4, 0, 0.94, 0.88), 0s)
+
+.mm.pm-details-episodes-list.pm-player-open
+  height: 57%
 
 .mm#detailstoggler
   display: none
@@ -373,7 +377,7 @@ body
   position: relative
   display: flex
   align-items: center
-  +transition(all, 0.3s, cubic-bezier(0.54, 0.04, 0.85, 0.99), 0s)
+  +transition(all, .4s, cubic-bezier(0.4, 0, 0.94, 0.88), 0s)
   border-bottom: 1px solid rgba(255,255,255,0.4)
   .mm.pm-episode-title-wrapper
     display: flex
@@ -405,6 +409,8 @@ body
     color: #eeeeee
     opacity: 0.9
 
+.mm.pm-episodes-li.pm-player-open
+  height: 19%
 
 
 /*******************************************************/
@@ -424,7 +430,7 @@ body
   position: fixed
   top: 39vh
   z-index: 1
-  +transition(all,.3s,linear,0s)
+  +transition(all,.3s,cubic-bezier(0.68, -0.55, 0.27, 1.55),0s)
 
 .mm.pm-episode-card-title-wrapper
   height: 20%
@@ -485,12 +491,12 @@ body
   display: none
 
 .mm.videogular-container-wrapper
-  height: 21vh
+  height: 0vh
   position: fixed
-  display: none
+  display: block
   bottom: 0%
   +bgGradient($pal-playerg1,$pal-playerg2)
-  +transition(all, .4s, linear, 0s)
+  +transition(all, .8s, cubic-bezier(0.68, -0.55, 0.27, 1.55), 0s)
 
 .mm.videogular-container-wrapper.popup
   display: block
@@ -507,6 +513,10 @@ body
   display: flex
   justify-content: flex-start
   flex-direction: row
+
+.mm.pm-vg-controls
+  height: 0px
+  +transition(all, .4s, cubic-bezier(0.68, -0.55, 0.27, 1.55), .4s)
 
 .mm.pm-player-bar-artwork-wrapper
   height: 70%
